 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES
 
IMPROVEMENTS

PIG-4066: An optimization for ROLLUP operation in Pig (hxquangnhat via cheolsoo)

PIG-4333: Split BigData tests into multiple groups (rohini)
 
BUG FIXES

PIG-4213: CSVExcelStorage not quoting texts containing \r (CR) when storing (alfonso.nishikawa via daijy)

PIG-2647: Split Combining drops splits with empty getLocations() (tmwoodruff via daijy)

PIG-4294: Enable unit test "TestNestedForeach" for spark (kellyzly via rohini)

PIG-4282: Enable unit test "TestForEachNestedPlan" for spark (kellyzly via rohini) 

PIG-4361: Fix perl script problem in TestStreaming.java (kellyzly via xuefu)

PIG-4354: Port local mode tests to Tez - part3 (daijy)

PIG-4338: Fix test failures with JDK8 (rohini)

PIG-4351: TestPigRunner.simpleTest2 fail on trunk (daijy)

PIG-4350: Port local mode tests to Tez - part2 (daijy)

PIG-4326: AvroStorageSchemaConversionUtilities does not properly convert schema for maps of arrays of records (mprim via daijy)

PIG-4345: e2e test "RubyUDFs_13" fails because of the different result of "group a all" in different engines like "spark", "mapreduce" (kellyzly via rohini)

PIG-4332: Remove redundant jars packaged into pig-withouthadoop.jar for hadoop 2 (rohini)

PIG-4331: update README, '-x' option in usage to include tez (thejas via daijy)

PIG-4327: Schema of map with value that has an alias can't be parsed again (mprim via daijy)

PIG-4330: Regression test for PIG-3584 - AvroStorage does not correctly translate arrays of strings (brocknoland via daijy)

PIG-3615: Update the way that JsonLoader/JsonStorage deal with BigDecimal (tyro89 via daijy)

PIG-4329: Fetch optimization should be disabled when limit is not pushed up (lbendig via cheolsoo)

PIG-3413: JsonLoader fails the pig job in case of malformed json input (eyal via daijy)
